fix: Displaying buttons on mobile devides

--- a/src/style/components/_Slider-v3.scss
+++ b/src/style/components/_Slider-v3.scss
@@ -83,9 +83,10 @@
     }
 
     &-button {
-        width: 40px;
-        height: 40px;
-        display: block;
+        position: relative;
+        width: 50px;
+        height: 50px;
+        display: flex;
         position: absolute;
         top: 50%;
         transform: translateY(-50%);
@@ -95,14 +96,19 @@
         border-radius: 50%;
         font-size: $large-font-size;
 
+        i {
+            position: absolute;
+            transform: translate(-50%, -50%);
+        }
+
         @include buttonHover;
 
         &--left {
-            left: -20px;
+            left: -25px;
         }
 
         &--right {
-            right: -20px;
+            right: -25px;
         }
     }
 }
